2006-10-18 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* test/array.c: new test for insertion in the middle of other values.
	* src/garray.c: fixed destination index.

2006-10-18  Miguel de Icaza  <miguel@novell.com>

	* src/gpath.c (g_build_path): Do not append terminator if the next
	string is empty.

	* src/gutf8.c (g_utf8_to_utf16): Include trailing zero as
	documented.
	(g_utf16_to_utf8): Include trailing zero as documented.

2006-10-17  Miguel de Icaza  <miguel@novell.com>

	* src/gstr.c (g_strdown): Actually move.

	* src/gmarkup.c (g_markup_parse_context_parse): Accept dots in the
	sequence, reset the state after a closing element.

	* src/garray.c (g_array_insert_vals): Shift the elements the
	correct amount.

	(g_array_insert_vals): Should actually use the
	number of elements to insert.

	* test/array.c: Add new test case, this was happening in the JIT. 

	* Add _GNU_SOURCE at configure time, remove from sources.
	
	* src/gstr.c (g_strsplit): Empty strings return a 0 value vector.

	* src/glib.h (G_MAXINT64, G_MININT64): Add another set of macros
	for the support stuff.
	
	Move private prototypes elsewhere

	* src/glib.h (g_thread_init): Adding missing brace
	(g_list_next): remove ; from the macro definition.

2006-10-17  Miguel de Icaza  <miguel@novell.com>

	* src/gutf8.c: internal methods

	* src/ghashtable.c: internal methods.

2006-10-16  Miguel de Icaza  <miguel@novell.com>

	* src/gerror.c (g_propagate_error): Implement.

	* src/gstr.c (g_strjoinv, g_ascii_strncasecmp): implement.

	* test/string-util.c (test_ascii_strncasecmp): test

2006-10-15  Miguel de Icaza  <miguel@novell.com>

	* configure.in: Fix detection of platforms the [3456] stuff does
	not work inside autoconf.

	* src/eglib-config.h.in: Make G_BREAKPOINT into a function-macro

	* src/glib.h (offsetof): Mono sources depend on this, bring this
	from the standard definition.  Redefine G_STRUCT_OFFSET in terms
	of this. 
	
	* src/glib.h (G_STRUCT_OFFSET): fix macro definition. 