@@ -82,7 +82,7 @@ g_path_get_dirname (const gchar *filename)
 
 	p = strrchr (filename, G_DIR_SEPARATOR);
 	if (p == NULL)
-		return g_strdup ("");
+		return g_strdup (".");
 	count = p - filename;
 	r = g_malloc (count + 1);
 	strncpy (r, filename, count);
