@@ -1,3 +1,12 @@
+2006-10-21  Miguel de Icaza  <miguel@novell.com>
+
+	* src/gstr.c (g_strsplit): this routine has some non-expected
+	behavior, if the string begins with the delimiter, it will return
+	an empty first string, unlike strtok
+
+	* src/gpath.c (g_path_get_dirname): Return "." as a dirname for
+	paths that do not contain a directory.
+
 2006-10-18 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
 	* test/array.c: new test for insertion in the middle of other values.
